// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`behaves correctly when interacting 1`] = `
<label
  class="PicassoFormControlLabel-root"
  classes="[object Object]"
  data-testid="switch"
>
  <span
    class="MuiSwitch-root"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-checked Mui-checked"
    >
      <span
        class="MuiIconButton-label"
      >
        <input
          class="PrivateSwitchBase-input MuiSwitch-input"
          type="checkbox"
          value=""
        />
        <span
          class="MuiSwitch-thumb"
        />
      </span>
    </span>
    <span
      class="MuiSwitch-track"
    />
  </span>
  <span
    class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label"
  >
    <span
      class="PicassoFormLabel-text"
    >
      Switch
    </span>
  </span>
</label>
`;

exports[`renders default Switch without label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      class="MuiSwitch-root"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
        data-testid="switch"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input"
            type="checkbox"
            value=""
          />
          <span
            class="MuiSwitch-thumb"
          />
        </span>
      </span>
      <span
        class="MuiSwitch-track"
      />
    </span>
  </div>
</div>
`;

exports[`renders disabled state 1`] = `
<label
  class="PicassoFormControlLabel-root PicassoFormControlLabel-disabled"
  classes="[object Object]"
  data-testid="switch"
>
  <span
    class="MuiSwitch-root"
  >
    <span
      aria-disabled="true"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-disabled Mui-disabled Mui-disabled Mui-disabled"
      tabindex="-1"
    >
      <span
        class="MuiIconButton-label"
      >
        <input
          class="PrivateSwitchBase-input MuiSwitch-input"
          disabled=""
          type="checkbox"
          value=""
        />
        <span
          class="MuiSwitch-thumb"
        />
      </span>
    </span>
    <span
      class="MuiSwitch-track"
    />
  </span>
  <span
    class="PicassoFormLabel-root PicassoFormLabel-disabled PicassoFormLabel-inline PicassoFormControlLabel-label"
  >
    <span
      class="PicassoFormLabel-text"
    >
      Disabled
    </span>
  </span>
</label>
`;
